syntax = "proto3";
// package config_center.api;

option go_package = "github.com/MaoScut/grpc-demo/grpc-lb/app/appproto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayHelloLoop(stream HelloLoopRequest) returns (stream HelloLoopReply) {}
}

// The request message containing the user's name.
message HelloRequest { string name = 1; }

// The response message containing the greetings
message HelloReply { string message = 1; }

message HelloLoopRequest { string name = 1; }

message HelloLoopReply { string message = 1; }
